Refactor event creation process to include user authorization and improve session layout handling